src/test/ui/issues/issue-37311-type-length-limit/issue-37311.stderr
error: reached the recursion limit while instantiating `<(&(&(&(&(&(&(&(&(&(&(&(&(&(&(&(.....), ...), ...) as Foo>::recurse`
  --> $DIR/issue-37311.rs:16:9
   |
LL |         (self, self).recurse();
   |         ^^^^^^^^^^^^^^^^^^^^^^
   |
note: `<T as Foo>::recurse` defined here
  --> $DIR/issue-37311.rs:15:5
   |
LL |     fn recurse(&self) {
   |     ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

